# stonks

./: .gitignore  app.py  config.py  pyproject.toml
migrations/versions/: 17d4fa5ffbf7_add_users_table.py  ae8e81baa0dc_add_stocks_table.py  e8ed61c4eb50_add_stocks_table.py  f3db1e8d2357_add_mail_confirmation_to_users.py
project/: __init__.py  models.py
project/static/css/: index_style.css  stocks_style.css  user_profile_style.css
project/stocks/: __init__.py  routes.py
project/stocks/templates/stocks/: add_stock.html  stocks.html
project/templates/: 405.html  base.html
project/users/: __init__.py  forms.py  routes.py
project/users/templates/users/: 403.html  email_confirmation.html  login.html  profile.html  register.html
stonks/: app.py
stonks/static/css/: base_style.css  form_style.css
stonks/templates/: about.html  add_stock.html  base.html  index.html  stocks.html
templates/: base.html  index.html
tests/: conftest.py
tests/functional/: test_stocks.py  test_users.py
tests/unit/: test_app.py  test_models.py
