[tool.poetry]
name = "stonks"
version = "0.1.0"
description = ""
authors = ["Vitor <pro.vitoralmeida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
flask = "^3.0.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
